# app_of_habits

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
docs_eng/: README.md
habits/: admin.py  models.py  paginators.py  permissions.py  services.py  tasks.py  tests.py  urls.py  validators.py
habits/api_views/: award.py  habit.py
habits/migrations/: 0001_initial.py
habits/serializers/: award.py  habit.py
users/: admin.py  models.py  permissions.py  tests.py
users/api_views/: user.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_telegram_id.py
users/serializers/: user.py
